endpoint/cmd/endpoint/k8s/02-endpoint.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kube-system
  name: endpoint
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: endpoint
  template:
    metadata:
      labels:
        app: endpoint
    spec:
      containers:
        - name: endpoint
          # image: bright/endpoint:latest
          image: bright/endpoint:latest
          imagePullPolicy: Never
          volumeMounts:
            - name: service-config
              mountPath: /etc/endpoint
      volumes:
        - name: service-config
          configMap:
            name: endpoint-config
---
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: endpoint
spec:
  ports:
    - name: http
      port: 30120
      targetPort: 30120
    - name: grpc
      port: 30121
      targetPort: 30121
    - name: healthz
      port: 30122
      targetPort: 30122
  selector:
    app: endpoint
