endpoint/cmd/endpoint/k8s/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kube-system
  name: endpoint-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-head-cors@kubernetescrd,
      kube-system-strip-endpoint-prefix@kubernetescrd
      # kube-system-headers-userid-to-body@kubernetescrd,
      # kube-system-headers-login-token-to-body@kubernetescrd,
      # kube-system-user-role-rbac-auth@kubernetescrd

spec:
  rules:
    - host:
      http:
        paths:
          - path: /api/endpoint/
            pathType: Prefix
            backend:
              service:
                name: endpoint
                port:
                  number: 30120
